# bonefish

./: .gitmodules  CMakeLists.txt
cmake/: bonefish-config.cmake.in
daemon/: CMakeLists.txt
examples/: CMakeLists.txt
src/bonefish/messages/: wamp_hello_details.cpp  wamp_message_defaults.cpp  wamp_welcome_details.cpp
src/bonefish/serialization/: json_serializer.cpp  msgpack_serializer.cpp
